force-app/main/default/objects/Day__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <label>Breakfast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bagel</fullName>
            </value>
            <value>
                <fullName>Cereal</fullName>
            </value>
            <value>
                <fullName>Burrito</fullName>
            </value>
            <value>
                <fullName>Smoothie</fullName>
            </value>
            <value>
                <fullName>Yogurt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>