force-app/main/default/objects/Day__c/fields/Daily_Alcoholic_Drinks_Drank__c.field-meta.xml
<CustomField>
    <fullName>Daily_Alcoholic_Drinks_Drank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Alcoholic Drinks Drank</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>