force-app/main/default/objects/Day__c/fields/Daily_Gallons_of_Water_Drank__c.field-meta.xml
<CustomField>
    <fullName>Daily_Gallons_of_Water_Drank__c</fullName>
    <formula>Daily_Liters_of_Water_Drank__c * 0.264172</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Gallons of Water Drank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>