force-app/main/default/objects/Day__c/fields/Daily_Liters_of_Water_Drank__c.field-meta.xml
<CustomField>
    <fullName>Daily_Liters_of_Water_Drank__c</fullName>
    <label>Daily Liters of Water Drank</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>