force-app/main/default/objects/Day__c/fields/Daily_Points_Scored__c.field-meta.xml
<CustomField>
    <fullName>Daily_Points_Scored__c</fullName>
    <label>Daily Points Scored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>