force-app/main/default/objects/Day__c/fields/Daily_Pushups__c.field-meta.xml
<CustomField>
    <fullName>Daily_Pushups__c</fullName>
    <label>Daily Pushups</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>