force-app/main/default/objects/Day__c/fields/Daily_Rating__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rating__c</fullName>
    <label>Daily Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>