force-app/main/default/objects/Day__c/fields/Daily_Score__c.field-meta.xml
<CustomField>
    <fullName>Daily_Score__c</fullName>
    <formula>Daily_Points_Scored__c /  Total_Daily_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>