force-app/main/default/objects/Day__c/fields/Daily_Steps__c.field-meta.xml
<CustomField>
    <fullName>Daily_Steps__c</fullName>
    <label>Daily Steps</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>