force-app/main/default/objects/Day__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATE((VALUE(Year__c)), Month__r.Month_Number__c, Day_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>