force-app/main/default/objects/Day__c/fields/Day_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Day_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 18 Character ID</label>
    <type>Text</type>
</CustomField>