force-app/main/default/objects/Day__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <label>Day Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>