force-app/main/default/objects/Day__c/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <label>Dinner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cook - Recipe</fullName>
            </value>
            <value>
                <fullName>Leftovers</fullName>
            </value>
            <value>
                <fullName>Cook - Frozen Food</fullName>
            </value>
            <value>
                <fullName>Eat Out - Restuarant</fullName>
            </value>
            <value>
                <fullName>Eat Out - Fast Food</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>