force-app/main/default/objects/Day__c/fields/Fat__c.field-meta.xml
<CustomField>
    <fullName>Fat__c</fullName>
    <inlineHelpText>g</inlineHelpText>
    <label>Fat</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>