force-app/main/default/objects/Day__c/fields/Fat_per_KG__c.field-meta.xml
<CustomField>
    <fullName>Fat_per_KG__c</fullName>
    <formula>Fat__c / IF(ISBLANK(Week__r.Weight__c), (175 / 2.205), (Week__r.Weight__c / 2.205))</formula>
    <label>Fat per KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>