force-app/main/default/objects/Day__c/fields/Incomplete_Food_Log__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Food_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete Food Log</label>
    <type>Checkbox</type>
</CustomField>