force-app/main/default/objects/Day__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leftovers</fullName>
            </value>
            <value>
                <fullName>Snack / Binge Eat</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Eat Out - Restuarant</fullName>
            </value>
            <value>
                <fullName>Eat Out - Fast Food</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>