force-app/main/default/objects/Day__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipLabel>Day</relationshipLabel>
    <relationshipName>Day</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>