force-app/main/default/objects/Day__c/fields/Net_Carbs__c.field-meta.xml
<CustomField>
    <fullName>Net_Carbs__c</fullName>
    <inlineHelpText>g</inlineHelpText>
    <label>Net Carbs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>