force-app/main/default/objects/Day__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <inlineHelpText>g</inlineHelpText>
    <label>Protein</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>