force-app/main/default/objects/Day__c/fields/Protein_per_KG__c.field-meta.xml
<CustomField>
    <fullName>Protein_per_KG__c</fullName>
    <formula>Protein__c / IF(ISBLANK(Week__r.Weight__c), (175 / 2.205), (Week__r.Weight__c / 2.205))</formula>
    <label>Protein per KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>