force-app/main/default/objects/Day__c/fields/Screen_Time__c.field-meta.xml
<CustomField>
    <fullName>Screen_Time__c</fullName>
    <label>Screen Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>