force-app/main/default/objects/Day__c/fields/Total_Daily_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Points__c</fullName>
    <label>Total Daily Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>