force-app/main/default/objects/Day__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <referenceTo>Week__c</referenceTo>
    <relationshipLabel>Day</relationshipLabel>
    <relationshipName>Day</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>