force-app/main/default/objects/Day__c/fields/Week_Name__c.field-meta.xml
<CustomField>
    <fullName>Week_Name__c</fullName>
    <formula>Week__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Name</label>
    <type>Text</type>
</CustomField>