force-app/main/default/objects/Day__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>Month__r.Year__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>