force-app/main/default/objects/Day__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Daily_Score__c</columns>
    <columns>Daily_Alcoholic_Drinks_Drank__c</columns>
    <columns>Daily_Liters_of_Water_Drank__c</columns>
    <columns>Daily_Gallons_of_Water_Drank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>