force-app/main/default/objects/Day__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Daily_Score__c</columns>
    <columns>Daily_Alcoholic_Drinks_Drank__c</columns>
    <columns>Daily_Liters_of_Water_Drank__c</columns>
    <columns>Daily_Gallons_of_Water_Drank__c</columns>
    <columns>External_Day_SFID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>